exported_metadata/main/default/objects/Approval_Config__c/Approval_Config__c.object-meta.xml
<CustomObject>
    <label>Approval Config</label>
    <nameField>
        <label>Approval Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>