exported_metadata/main/default/objects/Approval_Config__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>Name of this Approval configuration</description>
    <inlineHelpText>This is used as a display name for users to choose from.</inlineHelpText>
    <label>Config Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>