exported_metadata/main/default/objects/Approval_Config__c/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track if this approval is accepted or not.</description>
    <inlineHelpText>Set to true when approval is accepted via Flow.</inlineHelpText>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>