exported_metadata/main/default/objects/Approval_Config__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional notes or remarks on the approval</description>
    <inlineHelpText>Enter any comments or context here</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>